# KryptonInternal

./: .gitignore  README.md  client.cpp  dnsseedclient.cpp  dnsseedserver.cpp  makecmds  server.cpp
linkking/: CMakeLists.txt
linkking/include/server/: version.h
linkking/include/server/asio/: asio.inl  memory.inl  service.h  ssl_client.h  ssl_session.h  tcp_client.h  tcp_session.h  udp_client.h  udp_server.h
linkking/include/server/http/: http.h  http_request.h  http_response.h  http_response.inl  http_session.h  https_server.h  https_session.h
linkking/include/server/ws/: ws_client.h  ws_server.h  ws_session.h  wss_server.h  wss_session.h
linkking/modules/CppBenchmark/examples/: fpu.cpp  fwrite.cpp  iterators.cpp  mpmc.cpp  timers.cpp  virtual.cpp
linkking/modules/CppBenchmark/include/benchmark/: benchmark_pc.h  console.inl  context_pc.h  cppbenchmark.h  environment.h  fixture_threads.h  phase_core.h  phase_scope.h  reporter.h  reporter_console.h  reporter_csv.h  reporter_json.h
linkking/modules/CppBenchmark/source/benchmark/: benchmark_pc.cpp  context.cpp  context_threads.cpp  executor.cpp  launcher_console.cpp  phase_metrics.cpp  system.cpp
linkking/modules/CppBenchmark/tests/: test_environment.cpp  test_system.cpp
linkking/modules/CppCommon/: CMakeLists.txt
linkking/modules/CppCommon/examples/: algorithms_token_bucket.cpp  cache_filecache.cpp  common_flags.cpp  common_function.cpp  common_uint256.cpp  containers_bintree.cpp  containers_flatmap.cpp  containers_queue.cpp  errors_fatal.cpp  errors_system_error.cpp  filesystem_path.cpp  filesystem_symlink.cpp  filesystem_touch.cpp  math_math.cpp  memory_arena.cpp  memory_leaks.cpp  string_utils.cpp  system_dll.cpp  system_environment.cpp  threads_barrier.cpp  threads_critical_section.cpp  threads_latch_single.cpp  threads_mpmc_ring_queue.cpp  threads_mpsc_ring_queue.cpp  threads_named_condition_variable.cpp  threads_named_event_manual_reset.cpp  threads_named_mutex.cpp  threads_semaphore.cpp  threads_spin_barrier.cpp  threads_thread.cpp  threads_wait_queue.cpp  threads_wait_ring.cpp  time_time.cpp  time_timestamp.cpp
linkking/modules/CppCommon/include/cache/: filecache.h  memcache.h  memcache.inl
linkking/modules/CppCommon/include/common/: uint256.h  uint256.inl  writer.h
linkking/modules/CppCommon/include/containers/: bintree.h  bintree.inl  bintree_aa.inl  bintree_rb.inl  bintree_splay.h  bintree_splay.inl  hashmap.h  queue.h  queue.inl
linkking/modules/CppCommon/include/errors/: exceptions_handler.h
linkking/modules/CppCommon/include/filesystem/: directory.h  directory_iterator.inl  file.inl  path.h  symlink.h  symlink.inl
linkking/modules/CppCommon/include/math/: math.h  math.inl
linkking/modules/CppCommon/include/memory/: allocator_heap.inl  allocator_null.h  allocator_pool.h  allocator_stack.h  memory.h  memory.inl
linkking/modules/CppCommon/performance/: containers_bintree.cpp  memory_managers.cpp  string_format.cpp  system_pipe.cpp  system_stack_trace.cpp  system_uuid.cpp  threads_file_lock.cpp  threads_mpsc_linked_queue.cpp  threads_mpsc_ring_queue.cpp  threads_mutex.cpp  threads_named_critical_section.cpp  threads_named_rw_lock.cpp  threads_semaphore.cpp  threads_spsc_ring_buffer.cpp  threads_spsc_ring_queue.cpp  threads_thread.cpp  threads_wait_queue.cpp  threads_wait_ring.cpp  time_time.cpp  time_timestamp.cpp
linkking/modules/CppCommon/tests/: test.cpp  test_common_flags.cpp  test_containers_flatmap.cpp  test_containers_queue.cpp  test_errors_system_error.cpp  test_filesystem_directory.cpp  test_filesystem_file.cpp  test_filesystem_path.cpp  test_math_math.cpp  test_memory_memory.cpp  test_string_encoding.cpp  test_string_utils.cpp  test_system_environment.cpp  test_system_shared_memory.cpp  test_system_shared_type.cpp  test_threads_barrier.cpp  test_threads_critical_section.cpp  test_threads_event_auto_reset.cpp  test_threads_event_manual_reset.cpp  test_threads_file_lock.cpp  test_threads_mpmc_ring_queue.cpp  test_threads_mpsc_ring_buffer.cpp  test_threads_mpsc_ring_queue.cpp  test_threads_mutex.cpp  test_threads_named_critical_section.cpp  test_threads_named_event_auto_reset.cpp  test_threads_named_event_manual_reset.cpp  test_threads_named_rw_lock.cpp  test_threads_named_semaphore.cpp  test_threads_semaphore.cpp  test_threads_spin_barrier.cpp  test_threads_spin_lock.cpp  test_threads_spsc_ring_queue.cpp  test_threads_wait_batcher.cpp  test_time_time.cpp  test_utility_endian.cpp  test_utility_static_constructor.cpp
linkking/performance/: http_trace_client.cpp  https_trace_client.cpp  ssl_echo_client.cpp  ssl_multicast_client.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_multicast_client.cpp  tcp_multicast_server.cpp  udp_multicast_client.cpp  ws_echo_client.cpp  ws_echo_server.cpp  ws_multicast_client.cpp  wss_echo_server.cpp  wss_multicast_server.cpp
linkking/serve/: asio_service.h  client.cpp  server.cpp
linkking/source/server/asio/: service.cpp  ssl_server.cpp  tcp_resolver.cpp  tcp_server.cpp  tcp_session.cpp  timer.cpp  udp_client.cpp  udp_server.cpp
linkking/source/server/http/: http_client.cpp  http_request.cpp  http_response.cpp  http_server.cpp  http_session.cpp
linkking/source/server/ws/: ws.cpp  ws_client.cpp  wss_client.cpp
linkking/tests/: test_https.cpp  test_timer.cpp  test_ws.cpp
linkking/tools/certificates/: ca-secret.key  client.key  client.pfx  readme.md  server.crt  server.csr  server.key  server.pfx
linkking/www/api/: openapi.yaml
servers/: CMakeLists.txt
(+413 files in other folders)
